# dendrite

./: .gitignore  Cargo.toml  Cross.toml  README.md  build-web.sh  dendrite.toml
.cargo/: config.toml
.github/workflows/: deploy-pages.yml  deploy-viewer.yml  release.yml
crates/dendrite-core/: Cargo.toml
crates/dendrite-core/src/: cache.rs  device.rs  firmware.rs  fragment.rs  hcdf.rs  lib.rs  topology.rs
crates/dendrite-daemon/: Cargo.toml  build.rs
crates/dendrite-daemon/src/: api.rs  auth.rs  config.rs  firmware_fetch.rs  hcdf_fetch.rs  main.rs  ota.rs  server.rs  state.rs  ws.rs
crates/dendrite-discovery/: Cargo.toml
crates/dendrite-discovery/src/: arp.rs  lib.rs  lldp.rs  probe.rs  scanner.rs
crates/dendrite-mcumgr/: Cargo.toml
crates/dendrite-mcumgr/src/: lib.rs  query.rs  transport.rs
crates/dendrite-qr/: Cargo.toml
crates/dendrite-qr/src/: main.rs
crates/dendrite-scene/: Cargo.toml
crates/dendrite-scene/src/: camera.rs  hcdf_convert.rs  lib.rs  models.rs  scene.rs  types.rs  ui.rs
crates/dendrite-viewer/: Cargo.toml
crates/dendrite-viewer/src/: app.rs  file_loader.rs  lib.rs  models.rs  scene.rs  ui.rs
crates/dendrite-viewer/www/: dendrite_viewer.js
crates/dendrite-web/: Cargo.toml
crates/dendrite-web/src/: app.rs  file_picker.rs  lib.rs  models.rs  network.rs  scene.rs  ui.rs
docs/: hcdf-fragment-enhancement-plan.md
fragments/: index.toml
hcdf/examples/: navq95_system.hcdf
scripts/: Dendrite Viewer.bat  build-viewer.sh  build-web.sh  generate-certs.sh
viewer-web/: index.html  models  sample.hcdf.json
web/: CNAME  index.html
