[package]
name = "dendrite-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types, HCDF parsing, and device registry for Dendrite"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
quick-xml = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
sha2 = "0.10"
hex = "0.4"
semver = "1.0"

[dev-dependencies]
tempfile = "3.18"
