[package]
name = "dendrite-mcumgr"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCUmgr integration for Dendrite device queries"

[dependencies]
dendrite-core = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_cbor = "0.11"
serde_bytes = "0.11"
