[package]
name = "dendrite-qr"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "QR code generator for Dendrite daemon connection"

[[bin]]
name = "dendrite-qr"
path = "src/main.rs"

[dependencies]
qrcode = "0.14"
network-interface = { workspace = true }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { workspace = true }
