[package]
name = "dendrite-viewer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Standalone HCDF viewer for CogniPilot hardware visualization"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["webgpu"]
webgpu = ["bevy/webgpu", "dendrite-scene/webgpu"]
webgl2 = ["bevy/webgl2", "dendrite-scene/webgl2"]

[dependencies]
dendrite-core = { workspace = true }
dendrite-scene = { workspace = true }
bevy = { version = "0.17", default-features = false, features = [
    "bevy_asset",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_text",
    "bevy_ui",
    "reflect_auto_register",
    "tonemapping_luts",
    "ktx2",
    "zstd_rust",
    "https",
] }
bevy_egui = "0.38"
bevy_picking = { version = "0.17", features = ["bevy_mesh_picking_backend"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "Location",
    "UrlSearchParams",
    "HtmlInputElement",
    "HtmlElement",
    "File",
    "FileList",
    "FileReader",
    "Blob",
    "Url",
    "Event",
    "CssStyleDeclaration",
    "Node",
    "Response",
    "Headers",
    "RequestInit",
    "RequestMode",
    "Request",
    "console",
] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"
js-sys = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
