[package]
name = "dendrite-web"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebGPU-powered 3D visualization frontend for Dendrite"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = { version = "0.17", default-features = false, features = [
    "bevy_asset",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_text",
    "bevy_ui",
    "webgl2",  # Use WebGL2 for better Linux compatibility (WebGPU needs --enable-unsafe-webgpu flag)
    "tonemapping_luts",
    "ktx2",
    "zstd_rust",  # Renamed from "zstd" in Bevy 0.17
    "https",  # Enable loading assets from https:// URLs (built-in since Bevy 0.17)
] }
bevy_egui = "0.38"  # Compatible with Bevy 0.17
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
    "BinaryType",
] }
gloo-net = { version = "0.6", features = ["http", "websocket"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"
js-sys = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
# getrandom 0.3 needs wasm_js feature for WASM
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
