[package]
name = "dendrite-web"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebGPU-powered 3D visualization frontend for Dendrite"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["webgpu"]  # Default to WebGPU for best performance
webgpu = ["bevy/webgpu"]
webgl2 = ["bevy/webgl2"]

[dependencies]
bevy = { version = "0.17", default-features = false, features = [
    "bevy_asset",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_text",
    "bevy_ui",
    # NOTE: Do NOT enable bevy_picking here - we use the bevy_picking crate directly
    # to satisfy bevy_egui's dependency check (it looks for bevy_picking::PickingPlugin, not bevy::picking)
    "reflect_auto_register",  # Required for automatic type registration in scenes
    # Renderer backend selected via features: webgpu (default) or webgl2
    "tonemapping_luts",
    "ktx2",
    "zstd_rust",  # Renamed from "zstd" in Bevy 0.17
    "https",  # Enable loading assets from https:// URLs (built-in since Bevy 0.17)
] }
# bevy_egui with picking enabled - requires bevy_picking as a direct dependency
# because bevy_egui checks for bevy_picking::PickingPlugin (the crate), not bevy::picking::PickingPlugin
bevy_egui = "0.38"
# Must add bevy_picking directly so bevy_egui can find PickingPlugin
bevy_picking = { version = "0.17", features = ["bevy_mesh_picking_backend"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
    "BinaryType",
    # File picker support
    "HtmlInputElement",
    "HtmlElement",
    "File",
    "FileList",
    "FileReader",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "Event",
    "CssStyleDeclaration",
    "Node",
] }
gloo-net = { version = "0.6", features = ["http", "websocket"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"
js-sys = "0.3"
base64 = "0.22"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
# getrandom 0.3 needs wasm_js feature for WASM
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
